[tool.poetry]
name = "flockwave-parsers"
version = "2.1.0"
description = "Parser objects for various message formats"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "flockwave", from = "src" }
]
license = "MIT"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
priority = "explicit"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.7"
tinyrpc = {version = "^1.0.4", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.0"}
pytest-cov = "^3.0.0"

[tool.poetry.extras]
rpc = ["tinyrpc"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
